--- a/app/index.html
+++ b/app/index.html
@@ -54,10 +54,7 @@
     <![endif]-->
     <!-- endbuild -->
 
-    <script src="http://www.babylonjs.com/hand.minified-1.2.js"></script>
-    <script src="http://www.babylonjs.com/cannon.js"></script>
-    <script src="http://www.babylonjs.com/oimo.js"></script>
-    <script src="http://www.babylonjs.com/babylon.js"></script>
+    <script src="https://cdn.babylonjs.com/babylon.js"></script>
         
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -70,7 +67,6 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/babylonjs/babylon.2.2.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
